--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,37 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_18
+    targetCompatibility = JavaVersion.VERSION_18
+}
+
+sourceSets {
+    main {
+        java.srcDir("src/main/java")
+    }
+
+    test {
+        java.srcDir("src/test/java")
+    }
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-test {
-    useJUnitPlatform()
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = "UTF-8"
+}
+
+tasks.withType(Javadoc).configureEach {
+    options.encoding = "UTF-8"
+}
+
+tasks {
+    test {
+        testLogging.showExceptions = true
+        useJUnitPlatform()
+    }
 }
